# anisq

./: .gitignore  README.txt  pyproject.toml
anime_cli/: __main__.py
anime_cli/keys/: __init__.py  read_win.py
anisq/: __init__.py  __main__.py
anisq/client/: __init__.py
anisq/libraries/: __init__.py  menu.py  playback.py
src/anisq/: __main__.py  menu.py  mpv.py
src/anisq/client/: __init__.py
src/anisq/keys/: keys.py  read_linux.py
src/bun/: README.txt  bun.lockb  index.js  package.json  wrangler.toml
src/bun/provider/: index.js
