[project]
name = "anisq"
dynamic = ["version"]
description = "Simple to use anime watching experience in your terminal."
authors = [
    { name = "iiPython", email = "ben@iipython.dev" }
]
dependencies = [
    "beautifulsoup4>=4.13.4",
    "mpv>=1.0.7",
    "readchar>=4.2.1",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "wrapt-timeout-decorator>=1.5.1",
]
readme = "README.txt"
requires-python = ">= 3.11"

[project.scripts]
anisq = "anisq.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "anisq/__init__.py"
